--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -26,6 +26,14 @@ body{
     margin: 0px;
     overflow-x: hidden;
 }
+
+// @media(min-width: 1024px) {
+//   body {
+//     padding-left: 10%;
+//     padding-right: 10%;
+//   }
+// }
+
 #mob_topbar{
     background-color: $title_orange;
     padding-left: 10px;
@@ -515,6 +523,7 @@ body{
     }
     #video {
       border-left-color: rgb(105, 38, 27);
+      background-image: none;
     }
     #tech {
       border-left-color: rgb(33, 47, 237);
@@ -616,6 +625,45 @@ body{
     margin-left: 2%;
   }
 }
+
+@media (min-width: 700px) {
+  .contents {
+    .photos {
+      display: flex;
+      #first_div {
+        width: 80%;
+      }
+    }
+  }
+}
+
+// @media (min-width: 1025px) {
+//   .contents {
+//     .top_gradient {
+//       display: flex;
+//       .photos {
+//         width: 60%;
+//         #first_div {
+//           width: 80%;
+//           height: 380px;
+//         }
+//       }
+//       .row {
+//         display: flex;
+//         flex-direction: column;
+//         flex-wrap: wrap;
+//         height: 100%;
+//         overflow: hidden;
+//         width: 100%;
+//         .column_flex {
+//           display: flex;
+//           width: 100%;
+//
+//         }
+//       }
+//     }
+//   }
+// }
 
 .byline{
   font-family: Helvetica,Arial,sans-serif;
@@ -855,7 +903,7 @@ html {
     }
     .post11{
         height: 175px;
-        width: 85%;
+        width: 60%;
         display: inline-block;
         vertical-align: top;
         white-space: normal;
@@ -907,7 +955,8 @@ html {
 .videobar{
     display: flex;
 }
-.subvideo{
+.sub_videos{
+  .each {
     ul{
         // display: flex;
     }
@@ -936,7 +985,8 @@ html {
             font-size: 0.9rem;
             text-align: center;
             font-weight: 200;
-            padding: 15px;
+            padding: 0px;
+            margin-left: -20px;
             font-family: $time_font;
         }
         a{
@@ -977,6 +1027,31 @@ html {
             }
         }
     }
+  }
+}
+
+@media (min-width: 700px) {
+  .contents {
+    .video1 {
+      display: flex;
+      flex-direction: row;
+      .vid {
+          width: 60%;
+      }
+      .sub_videos {
+        display: flex;
+        width: 41%;
+        height: 282px;
+        overflow-y: scroll;
+        margin-left: -13px;
+        margin-top: 70px;
+        flex-direction: column;
+      }
+      .see_more {
+        display: none;
+      }
+    }
+  }
 }
 
 .see_more {
@@ -1011,6 +1086,9 @@ html {
       padding-bottom: 5px;
 
       img {
+        display: table-cell;
+        vertical-align: top;
+        padding-right: 0.5rem;
         width: 80px;
         float: left;
       }
@@ -1030,12 +1108,66 @@ html {
           font-weight: bold;
         }
       }
+      p {
+        display: none;
+        font-family: sans-serif;
+        font-size: 13px;
+      }
     }
   }
 }
 
+@media(min-width: 600px) {
+  .news {
+    ul {
+      display: flex;
+      flex-wrap: wrap;
+      overflow-x: scroll;
+      li {
+        height: auto;
+        width: 48%;
+        display: flex;
+        border-right: 1px solid $grey5;
+        flex-direction: column;
+        position: relative;
+        flex-wrap: nowrap;
+        margin: 0px 0px;
+        padding: 5px 5px;
+        img {
+          width: 200px;
+          margin-top: 80px;
+          margin-left: 10%;
+          position: static;
+        }
+        h3 {
+          margin-left: 5px;
+          position: absolute;
+          margin-top: -280px;
+        }
+        h6 {
+          margin-left: 5px;
+          position: relative;
+          top: -220px;
+        }
+        p {
+          display: block;
+        }
+      }
+    }
+  }
+}
+
+@media (min-width: 1024px) {
+  .news {
+    ul {
+      li {
+        width: 32%;
+      }
+    }
+  }
+}
 #from_re {
-  margin-left: 20px;
+  margin: 20px;
   font-family: "Pathway Gothic One",sans-serif;
   svg {
     margin-left: 10px;
@@ -1072,6 +1204,7 @@ html {
 .page_footer {
   position: absolute;
    width: 100%;
+   max-width: 1024px;
    margin-bottom: 20px;
    box-sizing: border-box;
    color: #999;
@@ -1146,6 +1279,30 @@ html {
        width: 33%;
        box-sizing: border-box;
    }
+   .vox_media {
+     div {
+        position: relative;
+        bottom: 10px;
+        margin-left: 20%;
+        margin-top: 500px;
+       img {
+         width: 200px;
+       }
+     }
+     p {
+       margin-left: 10%;
+
+          a {
+            color: $title_orange;
+            opacity: 0.7;
+
+            &:hover {
+              opacity: 1;
+              text-decoration: underline;
+            }
+          }
+       }
+   }
 }
 @media (min-width: 500px) {
   .page_footer {
@@ -1155,5 +1312,11 @@ html {
     .connects, .sections, .basics {
       width: 33%;
     }
+  }
+}
+
+@media (min-width: 1024px) {
+  .page_footer {
+    margin-left: 21px;
   }
 }
